plugins {
    id 'java-library'
}

allprojects {
    apply plugin: "java-library"
    group 'net.orekyuu'
    archivesBaseName 'nilou'
    version '0.0.2-SNAPSHOT'
    sourceCompatibility = JavaVersion.VERSION_17

    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform()
        jvmArgs = ['--add-opens', 'jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED']
    }

    dependencies {
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
        testImplementation 'org.assertj:assertj-core:3.24.2'
    }

    javadoc {
        options.addStringOption('Xdoclint:none')
    }
}